link widget icons

--- a/partials/widget-links.hbs
+++ b/partials/widget-links.hbs
@@ -2,11 +2,11 @@
 <div class="widget links">
     <h3 class="footer-title">Links</h3>
        <ul>
-         <li><a href="https://hackersandslackers.com/about/">About Us</a></li>
-         <li><a href="https://hackersandslackers.com/series/">Series</a></li>
-         <li><a href="https://hackersandslackers.com/projects/">Projects</a></li>
-         <li><a href="https://hackersandslackers.com/resources/">Resources</a></li>
-         <li><a href="https://hackersandslackers.com/become-a-contributor/">Join The Club</a></li>
+         <li><a href="https://hackersandslackers.com/about/"><i class="far fa-info"></i> About Us</a></li>
+         <li><a href="https://hackersandslackers.com/series/"><i class="far fa-copy"></i> Series</a></li>
+         <li><a href="https://hackersandslackers.com/projects/"><i class="fab fa-trello"></i> Projects</a></li>
+         <li><a href="https://hackersandslackers.com/resources/"><i class="far fa-tools"></i> Resources</a></li>
+         <li><a href="https://hackersandslackers.com/become-a-contributor/"><i class="far fa-user-plus"></i> Join The Club</a></li>
        </ul>
 </div>
 <!-- end links widget -->
