--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -75,6 +75,11 @@
 				border: none !important;
 				padding: 8px 4px;
 
+				i {
+					margin: auto 8px !important;
+					width: fit-content !important;
+				}
+
 				&:hover {
 					background: #0db0e2;
 				}
@@ -156,7 +161,7 @@
 				cursor: pointer;
 				background: @hover-color;
 				color: white !important;
-				box-shadow: 1px 1px 2px #239084;
+				box-shadow: 1px 1px 1px #239084;
 				border: 1px solid darken(@hover-color, 20%);
 			}
 		}
