--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -92,7 +92,7 @@ blockquote pre {
     font-weight: 200;
     line-height: 1.7;
     padding: 0 25px 20px;
-    white-space: pre-wrap;
+    white-space: pre-wrap !important;
     color: #d3dce0;
     font-family: 'AFParseGroteskMono-Light';
     @media(max-width: 600px) {
