--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -626,7 +626,7 @@
 	figcaption {
 		width: -webkit-fill-available;
 		width: -moz-available;
-		margin: -10px auto 0;
+		margin: 0 auto 0;
 		padding: 10px;
 		background-color: rgba(33,69,138,.04);
 		color: #5e6167;
