--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -47,7 +47,7 @@
 				background: @hover-color;
 				box-shadow: 2px 2px 3px 0 #239084;
 				* {
-					color: white;
+					color: white !important;
 				}
 			}
 		}
