--- a/src/less/pages/apply.less
+++ b/src/less/pages/apply.less
@@ -17,8 +17,6 @@
         line-height: 1.2;
         font-size: 1.8em;
       }
-
-
     }
 
     form {
@@ -92,7 +90,7 @@
       background: #f2f2f2;
       width: 100%;
       border: 0;
-      margin: 5px 0 15px;
+      margin: 0 0 15px;
       padding: 15px;
       box-sizing: border-box;
       font-size: 14px;
@@ -137,7 +135,7 @@
     }
 
     .container .info {
-      margin: 50px auto;
+      margin: 30px auto;
       text-align: center;
     }
 
@@ -245,6 +243,6 @@ button {
 
   &:hover {
     cursor: pointer;
-    background: @hover-color;
+    background: @hover-color !important;
    }
 }
