--- a/src/less/posts/table.css
+++ b/src/less/posts/table.css
@@ -14,6 +14,7 @@ table {
   border-spacing: 0;
   border: 1px solid rgba(77, 87, 109, 0.25);
   overflow: hidden;
+  margin-bottom: 30px;
 }
 @media (max-width: 600px) {
   table {
