--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -26,6 +26,14 @@
 			margin: 10px 0 10px !important;
 		}
 	}
+	@media(max-width: 1000px) {
+		padding: 30px 40px;
+	}
+	@media(max-width: 600px) {
+		margin-top: 10px;
+		display: block;
+		padding: 30px 20px 25px;
+	}
 
 	.footer-container {
 		max-width: 1000px;
@@ -36,14 +44,7 @@
 			flex-direction: column;
 		}
 	}
-	@media(max-width: 1000px) {
-		padding: 30px 40px;
-	}
-	@media(max-width: 600px) {
-		margin-top: 10px;
-		display: block;
-		padding: 0 10px 20px;
-	}
+
 
 	.widget.links {
 		h3 {
