--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -79,6 +79,7 @@
 				i {
 					margin: auto 8px !important;
 					width: fit-content !important;
+					font-size: 16px !important;
 				}
 
 				&:hover {
