--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -46,6 +46,7 @@
 				cursor: pointer;
 				background: @hover-color;
 				box-shadow: 2px 2px 3px 0 #239084;
+				color: white !important;
 				* {
 					color: white !important;
 				}
@@ -163,7 +164,7 @@
 				i {
 					margin: auto;
 					color: #a3a7b2;
-					font-size: 23px;
+					font-size: 19px;
 					display: block;
 					width: fit-content;
 				}
