--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -2,22 +2,22 @@
 <div class="widget contributors">
 	<h3 class="footer-title">Contributors</h3>
 	<div class="contributor-container">
-		{{#get "users"}}
-			{{#foreach users}}
+		{{#get "users" include="count.posts"}}
+			{{#foreach users filter="count.posts>0"}}
 				<div class="single-author {{slug}}">
 					{{#unless profile_image}}
 						<a href="{{url}}"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i></a>
 					{{/unless}}
 					{{#if profile_image}}
-        		<a href="{{url}}" class="avatar-link"><img src="{{img_url profile_image}}" alt="Author image" class="avi" data-rjs="3"></a>
+						<a href="{{url}}" class="avatar-link"><img src="{{img_url profile_image}}" alt="Author image" class="avi" data-rjs="3"></a>
 					{{/if}}
 					<div class="info">
 						<a href="{{url}}" class="single-author-name">{{name}}</a>
 						<span class="role"></span>
 					</div>
 				</div>
-				{{/foreach}}
-			{{/get}}
-			</div>
+			{{/foreach}}
+		{{/get}}
+	</div>
 </div>
 <!-- end authors widget -->
