--- a/partials/widget-tagcloud.hbs
+++ b/partials/widget-tagcloud.hbs
@@ -2,7 +2,7 @@
 <div class="widget tags">
 	<h4 class="footer-title">Tags</h4>
 	<div class="tag-cloud">
-		{{#get "tags" limit="all" include="count.posts" order="count.posts DESC" }}
+		{{#get "tags" filter="slug:-[roundup,machine-learning,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" limit="all" include="count.posts" order="count.posts DESC" }}
 			{{#foreach tags}}
 				<a href="{{url}}" class="">{{name}}</a>
 			{{/foreach}}
