link previews, meetup key

--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -3,7 +3,7 @@
 	<h3 class="footer-title">Contributors</h3>
 	<div class="contributor-container">
 		{{#get "users" include="count.posts"}}
-			{{#foreach users filter="count.posts>0"}}
+			{{#foreach users}}
 				<div class="single-author {{slug}}">
 					{{#unless profile_image}}
 						<a href="{{url}}"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i></a>
