--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -239,6 +239,7 @@
 		border-bottom: 0;
 		border-left: 5px solid #c8dec8;
 		background: #ecf1ec;
+		border-radius: 5px;
 		@media(max-width: 800px) {
 			margin: 30px 35px 60px;
 		}
@@ -250,7 +251,7 @@
 
 		p {
 			margin: 0 !important;
-			color: #7e9780;
+			color: #9dc29f;
 			line-height: 1.4 !important;
 			text-align: left;
 		}
@@ -258,7 +259,7 @@
 		i {
 			font-size: 37px;
 			margin-right: 25px;
-			color: #bddbbf;
+			color: #9dc29f;
 		}
 
 		.blurb-icon {
@@ -281,7 +282,7 @@
 	}
 
 	p {
-		margin: 0 0 25px 0 !important;
+		margin: 0 0 25px 0;
 		font-size: 1em;
 
 		@media (max-width: 800px) {
