--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -32,7 +32,159 @@
     }
   }
 
+  header {
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2) !important;
 
+    @media(max-width: 600px) {
+      margin-bottom: 0;
+    }
+  }
+
+
+  .navigation {
+    background: white;
+    height: 50px;
+    text-align: center;
+    position: relative;
+
+    .menu {
+      margin: auto;
+      padding: 0;
+      display: flex;
+      list-style: none;
+      justify-content: space-around;
+      align-items: center;
+      height: -webkit-fill-available;
+      height: -moz-fill-available;
+      max-width: 400px;
+      height: 50px;
+
+      @media(max-width: 600px) {
+        width: 300px;
+        margin: 0 auto 20px !important;
+        position: absolute;
+        left: 0;
+        right: 0;
+      }
+
+      li {
+        position: relative;
+        width: 50px;
+        height: 25px;
+      }
+
+      a {
+        font-family: 'ProductSans-Medium';
+        font-size: .9em;
+        text-transform: uppercase;
+        transform: scale(1);
+        color: #505f77;
+        font-weight: 500;
+        transition: all .15s ease-out;
+        position: absolute;
+        left:0;
+        right:0;
+        top:0;
+        bottom:0;
+
+        &:hover {
+          color: @theme-color;
+          cursor: pointer;
+          transform: scale(1.07);
+        }
+      }
+    }
+  }
+
+  #nav-search-results {
+    width: 226px;
+    position: absolute;
+    font-size: 1em;
+    font-family: 'TTNorms-Medium',sans-serif!important;
+    font-weight: 200;
+    transition: 0.3s all;
+    outline: none;
+    -webkit-appearance: none;
+    border: 1px solid #cfd3e0;
+    border-radius: 0 0 5px 5px;
+    border-top: 0;
+    opacity: 0;
+    z-index: 10;
+
+    * {
+      transition: 0.3s all;
+    }
+
+    li {
+      width: -webkit-fill-available;
+      padding: 10px 10px;
+      text-align: left;
+      display: flex;
+      justify-content: space-between;
+      background: #fff;
+
+      a {
+        font-size: .8em;
+        font-family: TTNorms-Medium;
+      }
+
+      &:nth-child(even) {
+        background: #f5f8fb;
+      }
+
+      &:hover {
+        background: lighten(@theme-color, 10%);
+        color: white;
+        border: 0;
+
+        a {
+          color: white;
+
+        }
+      }
+
+      img {
+        height: 55px;
+        width: 133px;
+        overflow: hidden;
+        margin-right: 15px;
+      }
+
+      div {
+        width: 100%;
+
+        a {
+          display: block;
+          line-height: 1.4;
+          font-size: 0.9em;
+          -webkit-line-clamp: 2;
+          font-weight: 600;
+        }
+
+        .tag {
+          display: block;
+          line-height: 1.5;
+
+          span {
+            font-size: 0.7em;
+            font-weight: 100;
+            line-height: 1.5;
+            padding: 5px 10px;
+            margin-top: 4px;
+            display: block;
+            width: fit-content;
+
+            i {
+              margin-right: 4px;
+              font-size: 0.7em;
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
 
   @media(max-width: 800px) {
     padding: 0 6%;
