--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -3,11 +3,12 @@
 
 .tag-roundup .post-content > p > a {
   display: none;
-  margin: 0;
+  margin: 0 !important;
+  margin-bottom: 0;
 }
 
-.tag-roundup > p {
-  margin: 0 0 0 0 !important;
+.post-template.tag-roundup > p {
+  margin: 0 !important;
 
   &:last-of-type .link-preview {
     border-bottom: none;
@@ -15,7 +16,7 @@
 }
 
 .link-preview {
-  padding: 15px;
+  padding: 30px 15px 15px;
   transition: all 0.2s ease-out;
   margin: 0 auto;
   display: block;
@@ -31,6 +32,14 @@
   @media(max-width: 600px) {
     width: 100%;
     padding: 0;
+  }
+
+  &:hover{
+    cursor: pointer;
+
+    * {
+      cursor: pointer;
+    }
   }
 
 
