--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -7,7 +7,7 @@
 	{{> widget-medium}}
 	{{> widget-meetup}}
 	{{#has slug="todd"}}
-		<iframe src="https://feed.mikle.com/widget/v2/99948/" height="1100px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+		<iframe src="https://feed.mikle.com/widget/v2/99948/" height="1100px" width="100%" class="fw-iframe" scrolling="no" frameborder="0" style="order:10;"></iframe>
 	{{else}}
 		{{> widget-authortwitter}}
 	{{/has}}
