--- a/partials/widget-medium.hbs
+++ b/partials/widget-medium.hbs
@@ -9,6 +9,7 @@
 
 <script>
 function createMediumCard(medium){
+  var medium_key = process.env.medium_key;
   console.log('medium= ' + medium);
   MediumWidget.Init({
     renderTo: '#medium-widget',
