author page test

--- a/partials/widget-authorwebsite.hbs
+++ b/partials/widget-authorwebsite.hbs
@@ -3,11 +3,11 @@
   <div class="widget author-website" style="0">
   </div>
 </a>
-<script>
+<!-- <script>
   $(document).ready(function() {
     function websiteCard(website) {
     }
     websiteCard('{{website}}');
   })
-</script>
+</script>-->
 <!-- end website widget -->
