--- a/partials/widget-meetup.hbs
+++ b/partials/widget-meetup.hbs
@@ -1,4 +1,4 @@
-<script>
+<!--<script>
 
 function createMeetupCard(meetup) {
   $.ajax({
@@ -55,4 +55,4 @@ function createMeetupCard(meetup) {
     }
   });
 }
-</script>
+</script>-->
