--- a/partials/widget-github.hbs
+++ b/partials/widget-github.hbs
@@ -5,7 +5,7 @@
     <div id="github-card-author"></div>
   </div>
 </div>
-
+<!--
 <script src="{{asset "/js/includes/gh-profile-card.min.js"}}"></script>
 <script>
   function createCard(username) {
@@ -21,5 +21,5 @@
     $('.github').css('display', 'block');
   }
 
-</script>
+</script>-->
 <!-- end github widget -->
