--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -39,7 +39,6 @@
       margin-left: 0;
       font-size: .8em;
       @media(max-width: 600px) {
-        font-size: 0.9em;
         line-height: 1.3;
         margin-bottom: 15px;
         display: flex;
@@ -67,14 +66,14 @@
   }
 
   .currentPost {
-    opacity: 1;
+    opacity: 1 !important;
     margin-left: 0;
-    font-family: 'TTNorms-Medium';
-    font-size: 1em;
+    font-family: 'TTNorms-Medium' !important;
+    font-size: 1em !important;
 
     &::before {
       margin-left: 0;
-      font-family: 'TTNorms-Bold';
+      font-family: 'TTNorms-Bold' !important;;
     }
   }
 }
