--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -7,9 +7,7 @@
     <script async src="{{asset "/js/previews.js"}}"></script>
   {{/has}}
 {{/is}}
-{{#is "home"}}
+{{#is 'page,home'}}
   <script src="{{asset "/js/includes/ghost-search.min.js"}}"></script>
-  <script src="{{asset "/js/search.min.js"}}"></script>
 {{/is}}
-<script src="{{asset "/js/main.min.js"}}"></script>
 <!-- End Scripts -->
