--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -39,6 +39,7 @@ blockquote pre {
       white-space: pre-line;
       max-height: 400px;
       overflow-x: visible;
+      border-radius: 3px;
     }
 
     code {
