--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -874,4 +874,9 @@
 			display: block;
 		}
 	}
+
+	.fullwidth {
+		margin-left: calc(-50vw + 50%) !important;
+    margin-right: calc(-50vw + 50%) !important;
+	}
 }
