--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -147,7 +147,7 @@ th {
       z-index: 1;
       position: absolute;
       left: 0;
-      width: 120px;
+      width: 100px;
       height: 100%;
       border: 0;
       border-right: 1px solid @table-border-color;
@@ -277,8 +277,8 @@ th {
   position: absolute;
   right: 0;
   height: 100%;
-  width: 60px;
+  width: 70px;
   top: 0;
   display: block;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0),white);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, .8));
 }
