--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -877,8 +877,10 @@
 	}
 
 	.fullWidth {
-		margin-left: calc(-50vw + 50%) !important;
-    margin-right: calc(-50vw + 50%) !important;
+		@media(max-width: 600px){
+			margin-left: calc(-50vw + 50%) !important;
+	    margin-right: calc(-50vw + 50%) !important;
+		}
 	}
 
 	.bottomFade {
