series page mobile fixes

--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -430,6 +430,10 @@
 	}
 
 	.series {
+
+		.post-title svg:nth-of_type(2){
+			display: none;
+		}
 		.seriesitem {
 			transition: all 0.2s ease-out;
 			border-bottom: 1px solid #d5dde8;
