series page mobile fixes

--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -430,7 +430,8 @@
 	}
 
 	.series {
-		.post-title > svg {
+		.post-title > svg,
+		 .post-title > i {
 			&:last-of-type{
 				display: none;
 			}
