series page mobile fixes

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -2,7 +2,7 @@
 <script src="{{asset "/js/includes/retina.min.js"}}"></script>
 <!--<script src="{{asset "/js/lazy-load.min.js"}}"></script>-->
 {{#is "post"}}
-  <script src="{{asset "/js/highlight.min.js"}}"></script>
+  <script src="{{asset "/js/includes/highlight.min.js"}}"></script>
   {{#has author="Matt Alhonte"}}
     <script async src="{{asset "/js/previews.js"}}"></script>
   {{/has}}
