--- a/default.hbs
+++ b/default.hbs
@@ -16,6 +16,7 @@
 	<script src="{{asset "dist/global.js"}}"></script>
 
 	{{#is "post"}}
+	<script src="{{asset "/js/includes/highlight.min.js"}}"></script>
 		<meta property="og:image" content="{{img_url feature_image}}">
 		<script src="{{asset "/dist/posts.js"}}"></script>
 	{{else}}
