postmortem from hljs emergency

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -7,7 +7,7 @@
     <script async src="{{asset "/js/previews.js"}}"></script>
   {{/has}}
 {{/is}}
-{{^is "page"}}
+{{^is "post,home"}}
   <script src="{{asset "/dist/pages.js"}}"></script>
 {{/is}}
 {{#is "author"}}
