--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -14,6 +14,10 @@
 		}
 	}
 
+	.main-content {
+		width: 100% !important;
+	}
+
 	.post-content {
 		margin: 10px 60px 30px;
 		overflow-x: visible;
@@ -311,7 +315,7 @@
 }
 
 .main-content {
-	width: 100%;
+	width: 100% !important;
 	max-width: 900px;
 	padding: 0 !important;
 
