--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -21,92 +21,91 @@
     text-shadow: none;
     background: #435643;
   }
-
-  .inserted {
+  .hljs-inserted {
     border-bottom: 1px dotted #f0fff0;
     text-decoration: none;
   }
 
-  .italic {
+  .hljs-italic {
     font-style: italic;
   }
 
-  .bold,
-  .important {
+  .hljs-bold,
+  .hljs-important {
     font-weight: bold;
   }
 
-  .important {
+  .hljs-important {
     color: #b3d6b3;
   }
 
-  .entity {
+  .hljs-entity {
     cursor: help;
   }
 
-  .highlight {
+  .hljs-highlight {
     outline: 0.4em solid #5c705c;
     outline-offset: 0.4em;
   }
 
-  .cdata,
-  .doctype,
-  .prolog {
+  .hljs-cdata,
+  .hljs-doctype,
+  .hljs-prolog {
     color: #535f53;
   }
 
-  .comment {
+  .hljs-comment {
     color: #7f8ba7;
   }
 
-  .built_in {
+  .hljs-built_in {
     font-weight: 700;
     color: #79ddfb;
   }
 
-  .punctuation {
+  .hljs-punctuation {
     color: #535f53;
   }
 
-  .namespace {
+  .hljs-namespace {
     opacity: 0.7;
   }
 
-  .number,
-  .operator,
-  .tag {
+  .hljs-number,
+  .hljs-operator,
+  .hljs-tag {
     color: #a2b34d;
   }
 
-  .property {
+  .hljs-property {
     color: #687d68;
   }
 
-  .atrule-id,
-  .selector,
-  .tag-id {
+  .hljs-atrule-id,
+  .hljs-selector,
+  .hljs-tag-id {
     color: #f0fff0;
   }
 
-  .attr-name {
+  .hljs-attr-name {
     color: #b3d6b3;
   }
 
-  .params,
-  .function {
+  .hljs-params,
+  .hljs-function {
     color: #EEAC18;
   }
 
-  .keyword {
+  .hljs-keyword {
     color: #FD92F0;
   }
 
-  .string {
+  .hljs-string {
     color: #F4E39D;
     font-family: 'AFParseGroteskMono-Light';
   }
 
-  .attr {
+  .hljs-attr {
     color: #a39fff;
   }
 
