--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -1,4 +1,4 @@
-.hljs.language-python,
+.language-python,
 .python.hljs {
   color: #e4f8fd ;
   background: linear-gradient(#2d4467,#1c2a40);
@@ -24,68 +24,54 @@
     }
   }
 
-  .meta {
+  .hljs-meta {
     color: #ffdc5d;
   }
 
-  .addition,
-  .addition,
-  .meta-string,
-  .meta-string,
-  .regexp,
-  .regexp,
-  .string,
-  .string {
+
+  .hljs-addition,
+  .hljs-meta-string,
+  .hljs-regexp,
+  .hljs-string {
     color: #93DCB8;
     font-family: 'AFParseGroteskMono-Light';
   }
 
-  .params {
+  .hljs-params {
     color: #ecb357;
   }
 
-  .comment {
+  .hljs-comment {
     color: #788198;
   }
 
-  .attribute,
-  .attribute {
+  .hljs-attribute {
     color: #d8b061;
   }
 
-  .class,
-  .class,
-  .title,
-  .title {
+  .hljs-class,
+  .hljs-title {
     color: #ffd712;
     font-family: 'AFParseGroteskMono-Bold';
   }
 
-  .attr,
-  .attr,
-  .number,
-  .number,
-  .selector-attr,
-  .selector-attr,
-  .selector-pseudo,
-  .selector-pseudo,
-  .template-variable,
-  .template-variable,
-  .type,
-  .type,
-  .variable,
-  .variable {
+  .hljs-attr,
+  .hljs-number,
+  .hljs-selector-attr,
+  .hljs-selector-pseudo,
+  .hljs-template-variable,
+  .hljs-type,
+  .hljs-variable {
     color: #bc82d8;
   }
 
-  .keyword {
+  .hljs-keyword {
     color: #00b1d5;
     font-family: 'AFParseGroteskMono-Bold';
   }
 
-  .function,
-  .function {
-    .keyword {
+  .hljs-function {
+    .hljs-keyword {
       color: #00b1d5;
     }
   }
