--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -7,82 +7,80 @@
   background: linear-gradient(#2d3555, #1d2036);
   font-weight: normal;
 
-  .title {
+  .hljs-title {
     color: #fad000;
     font-weight: normal;
   }
 
-  .name {
+  .hljs-name {
     color: #a1feff;
   }
 
-  .tag {
+  .hljs-tag {
     color: #ffffff;
   }
 
-  .attr {
+  .hljs-attr {
     color: #f8d000;
     font-style: italic;
   }
 
-  .built_in,
-  .section,
-  .selector-tag {
+  .hljs-built_in,
+  .hljs-section,
+  .hljs-selector-tag {
     color: #fb9e00;
   }
 
-  .keyword {
+  .hljs-keyword {
     color: #fb9e00;
   }
 
-  .hljs,
-  .subst {
+  .hljs-subst {
     color: #e3dfff;
   }
 
-  .addition,
-  .attribute,
-  .bullet,
-  .code,
-  .deletion,
-  .quote,
-  .regexp,
-  .selector-attr,
-  .selector-class,
-  .selector-pseudo,
-  .string,
-  .symbol,
-  .template-tag {
+  .hljs-addition,
+  .hljs-bullet,
+  .hljs-code,
+  .hljs-deletion,
+  .hljs-quote,
+  .hljs-regexp,
+  .hljs-selector-attr,
+  .hljs-selector-class,
+  .hljs-selector-pseudo,
+  .hljs-string,
+  .hljs-symbol,
+  .hljs-template-tag {
     color: #4cd213;
   }
 
-  .meta,
-  .meta-string {
+  .hljs-meta,
+  .hljs-meta-string {
     color: #fb9e00;
   }
 
-  .comment {
+  .hljs-comment {
     color: #ac65ff;
   }
 
-  .keyword,
-  .literal,
-  .name,
-  .selector-tag,
-  .strong {
+  .hljs-keyword,
+  .hljs-literal,
+  .hljs-name,
+  .hljs-selector-tag,
+  .hljs-strong {
     font-weight: normal;
   }
 
-  .literal,
-  .number {
+  .hljs-literal,
+  .hljs-number {
     color: #fa658d;
   }
 
-  .emphasis {
+  .hljs-emphasis {
     font-style: italic;
   }
 
-  .strong {
+  .hljs-strong {
     font-weight: bold;
   }
 }
