--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -20,70 +20,70 @@
     color: #c5c8c6;
   }
   /*color: fg_yellow*/
-  .name,
-  .title {
+  .hljs-name,
+  .hljs-title {
     color: #f0c674;
   }
   /*color: fg_comment*/
-  .comment,
-  .meta,
-  .meta .keyword {
+  .hljs-comment,
+  .hljs-meta,
+  .hljs-keyword {
     color: #707880;
   }
   /*color: fg_red*/
-  .deletion,
-  .link,
-  .literal,
-  .number,
-  .symbol {
+  .hljs-deletion,
+  .hljs-link,
+  .hljs-literal,
+  .hljs-number,
+  .hljs-symbol {
     color: #cebde3;
   }
   /*color: fg_green*/
-  .addition,
-  .doctag,
-  .regexp,
-  .selector-attr,
-  .selector-pseudo,
-  .string {
+  .hljs-addition,
+  .hljs-doctag,
+  .hljs-regexp,
+  .hljs-selector-attr,
+  .hljs-selector-pseudo,
+  .hljs-string {
     color: #b0def0;
     font-family: 'AFParseGroteskMono-Light';
   }
   /*color: fg_purple*/
-  .attribute,
-  .code,
-  .selector-id {
+  .hljs-attribute,
+  .hljs-code,
+  .hljs-selector-id {
     color: #b294bb;
   }
   /*color: fg_blue*/
-  .bullet,
-  .keyword,
-  .selector-tag,
-  .tag {
+  .hljs-bullet,
+  .hljs-keyword,
+  .hljs-selector-tag,
+  .hljs-tag {
     color: #79bbf3;
     font-family: 'AFParseGroteskMono-Bold';
   }
   /*color: fg_aqua*/
-  .subst,
-  .template-tag,
-  .template-variable,
-  .variable {
+  .hljs-subst,
+  .hljs-template-tag,
+  .hljs-template-variable,
+  .hljs-variable {
     color: #8abeb7;
   }
   /*color: fg_orange*/
-  .built_in,
-  .builtin-name,
-  .quote,
-  .section,
-  .selector-class,
-  .type {
+  .hljs-built_in,
+  .hljs-builtin-name,
+  .hljs-quote,
+  .hljs-section,
+  .hljs-selector-class,
+  .hljs-type {
     color: #ddbd73;
   }
 
-  .emphasis {
+  .hljs-emphasis {
     font-style: italic;
   }
 
-  .strong {
+  .hljs-strong {
     font-weight: bold;
   }
 
