fixed bash code

--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -1,9 +1,9 @@
-.hljs.language-shell,
+.language-shell,
 .hljs.shell,
 .hljs.output,
-.hljs.language-output,
+.language-output,
 .hljs.bash,
-.hljs.language-bash {
+.language-bash {
   background: linear-gradient(#2d3555, #1d2036);
   font-weight: normal;
 
