--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -86,7 +86,7 @@
 }
 
 .hljs.output,
-.hljs.language-output {
+.language-output {
   &::before {
     margin-bottom: 11px;
     margin-left: -40px;
@@ -113,9 +113,9 @@
 }
 
 .hljs.shell,
-.hljs.language-shell,
+.language-shell,
 .hljs.bash,
-.hljs.language-bash  {
+.language-bash  {
   &::before {
     margin-bottom: 11px;
     margin-left: -40px;
