--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -46,8 +46,9 @@
         max-width: 90%;
         margin: 20px auto 0;
         color: white;
-        font-family: TTNorms-Medium;
-        text-shadow: 0 0 20px #2f2d56;
+        font-family: TTNorms-Regular;
+        text-shadow: 2px 2px 0 #15133c, 2px 2px 10px #15133c;
+        font-size: 1.2em;
       }
     }
 
@@ -86,9 +87,10 @@
         min-height: 60px;
         margin-bottom: 55px;
         overflow: hidden;
-        font-family: TTNorms-Regular;
+        font-family: 'TTNorms-Regular';
         font-size: 1em;
         text-overflow: ellipsis;
+        font-weight: 600;
 
         @media(max-width: 600px){
           font-size: 9em;
