added labels and placeholders to application form

--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -26,19 +26,19 @@
                   <div class="split-fields">
                     <div class="input-field-group">
                       <label for="application_name">Full Name (required)</label>
-                      <input id="application_name"  class="form-control" maxlength="20" name="application_submission[name]" type="text" required="">
+                      <input id="application_name"  label="Full Name" class="form-control" maxlength="20" name="application_submission[name]" type="text" required="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_email"> Email (required) </label>
-                      <input id="application_email"  class="form-control" maxlength="30" name="application_submission[email]" type="email" required="">
+                      <input id="application_email"  placeholder="coolguy@yahoo.com" label="Email" class="form-control" maxlength="30" name="application_submission[email]" type="email" required="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_username"> Nickname /Call Sign/ Gangsta Rap Persona </label>
-                      <input id="application_username"  class="form-control" maxlength="30" name="application_submission[username]" type="text">
+                      <input id="application_username"  label="Nickname" placeholder="Mavrick" class="form-control" maxlength="30" name="application_submission[username]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application__expertise"> What are your areas of expertise? (required) </label>
-                      <input id="application__expertise"  class="form-control" maxlength="100" name="application_submission[expertise]" type="text" required="">
+                      <input id="application__expertise"  label="Experise" placeholder="Java, ASP, Perl"  class="form-control" maxlength="100" name="application_submission[expertise]" type="text" required="">
                     </div>
                   </div>
                 </fieldset>
@@ -50,7 +50,7 @@
                   </p>
                   <div class="input-field-group">
                     <label for="application_sample"> Writing sample (required) </label>
-                    <textarea  class="form-control" aria-describedby="application_sample" id="application_submission_sample" name="application_submission[sample]" required=""></textarea>
+                    <textarea class="form-control" label="Writing Sample" aria-describedby="application_sample" id="application_submission_sample" name="application_submission[sample]" required=""></textarea>
                   </div>
                 </fieldset>
 
@@ -62,30 +62,30 @@
                   <div class="split-fields">
                     <div class="input-field-group">
                       <label for="application_website">Website</label>
-                      <input  class="form-control" id="application_website" maxlength="40" name="application_submission[website]" type="text">
+                      <input  class="form-control" label="Website" placeholder="http://yourwebbsite.com" id="application_website" maxlength="40" name="application_submission[website]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_blog">Blog</label>
-                      <input  class="form-control" id="application_blog" maxlength="40" name="application_submission[blog]" type="text">
+                      <input  class="form-control" label="Blog" id="application_blog" placeholder="https://medium.com/You"  maxlength="40" name="application_submission[blog]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_github">Github</label>
-                      <input  class="form-control" id="application_github" maxlength="40" name="application_submission[github]" type="text">
+                      <input  class="form-control" label="Github" id="application_github" placeholder="https://github.com/nerdinator" maxlength="40" name="application_submission[github]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_twitter">Twitter</label>
-                      <input  class="form-control" id="application_twitter" maxlength="40" name="application_submission[twitter]" type="text">
+                      <input  class="form-control" label="Twitter" id="application_twitter" placeholder="https://twitter.com/YourHandle" maxlength="40" name="application_submission[twitter]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_myspace">MySpace</label>
-                      <input  class="form-control" id="application_myspace" maxlength="40" name="application_submission[myspace]" type="text">
+                      <input  class="form-control" label="Myspace" id="application_myspace" placeholder="http://www.myspace.com/emokid666" maxlength="40" name="application_submission[myspace]" type="text">
                     </div>
                     <div class="input-field-group">
                       <label for="application_ssn">Social Security Number</label>
-                      <input  class="form-control" id="application_ssn" maxlength="12" name="application_submission[ssn]" type="text">
+                      <input  class="form-control" label="SSN" id="application_ssn" placeholder="000-00-0000" maxlength="12" name="application_submission[ssn]" type="text">
                     </div>
                   </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" label="submit" class="btn btn-primary">Submit</button>
                   </div>
                 </fieldset>
               </form>
